@@ -97,7 +97,7 @@ set.
 =cut
 
 __PACKAGE__->_accessorize(
-  qw( line_number in_verbatim in_head1 callback target head1 skip link_address in_section_title ),
+  qw( line_number in_verbatim in_head1 callback target head1 skip_section_hash skip_words_list link_address in_section_title ),
 );
 
 =head1 CONSTRUCTOR
@@ -189,7 +189,8 @@ sub new ($class)
   $self->no_errata_section(1);
   $self->accept_targets( qw( stopwords ));
   $self->target(undef);
-  $self->skip({});
+  $self->skip_section_hash({});
+  $self->skip_words_list([]);
   $self->callback(sub {
     my $row = encode_json \@_;
     print "--- $row\n";
@@ -212,7 +213,20 @@ shouldn't be spell checked against a human language dictionary.
 
 sub skip_sections ($self, @sections)
 {
-  $self->skip->{lc $_} = 1 for @sections;
+  $self->skip_section_hash->{lc $_} = 1 for @sections;
+}
+
+=head2 skip_words
+
+ $parser->skip_words(@regex);
+
+Skip words that match the given list of regular expressions.
+
+=cut
+
+sub skip_words ($self, @regex)
+{
+  push $self->skip_words_list->@*, @regex;
 }
 
 sub _handle_element_start ($self, $tagname, $attrhash, @)
@@ -288,9 +302,15 @@ sub _handle_element_end ($self, $tagname, @)
 
 sub _add_words ($self, $line)
 {
-  foreach my $frag (split /\s/, $line)
+  outer: foreach my $frag (split /\s/, $line)
   {
     next unless $frag =~ /\w/;
+
+    foreach my $regex ($self->skip_words_list->@*)
+    {
+      next outer if $frag =~ $regex;
+    }
+
     if($frag =~ /^[a-z]+::([a-z]+(::[a-z]+)*('s)?)$/i)
     {
       my @row = ( 'module', $self->source_filename, $self->line_number, $frag );
@@ -351,7 +371,7 @@ sub _handle_text ($self, $text)
   }
   else
   {
-    return if $self->skip->{$self->head1};
+    return if $self->skip_section_hash->{$self->head1};
   }
   if($self->target)
   {
